--- a/index.html
+++ b/index.html
@@ -1,216 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Global InfoCity Park Chennai - Block A</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Poppins", sans-serif;
-      color: #222;
-      background: linear-gradient(135deg, #fff6e5, #ff9e42);
-      overflow-x: hidden;
-      position: relative;
-      min-height: 100vh;
-    }
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Global InfoCity Park Chennai</title>
+<style>
+body {
+  margin:0;
+  font-family:"Poppins",sans-serif;
+  background:linear-gradient(135deg,#fff6e5,#ff9e42);
+  min-height:100vh;
+  overflow-x:hidden;
+  color:#222;
+  position:relative;
+}
+#particles-js {position:fixed;top:0;left:0;width:100%;height:100%;z-index:0;pointer-events:none;}
 
-    .container {
-      width: 100%;
-      max-width: 520px;
-      margin: 0 auto;
-      position: relative;
-      z-index: 2;
-      padding-bottom: 40px;
-      text-align: center;
-    }
+/* Full page directory intro */
+#directoryIntro {
+  position:fixed;
+  top:0;left:0;
+  width:100%;
+  height:100%;
+  background:rgba(255,255,255,0.9);
+  z-index:5;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  overflow-y:auto;
+}
+.intro-floor {margin:20px 0; text-align:center;}
+.intro-floor h2 {color:#ff6a00;font-size:24px;margin-bottom:10px;}
+.intro-logos {display:flex;justify-content:center;gap:20px;flex-wrap:wrap;}
+.intro-logos img {height:60px;border-radius:10px;animation:fadeIn 1s ease forwards;}
+.intro-logos span {display:block;color:#ff6a00;font-weight:700;text-shadow:0 0 6px #ffd36e; animation:fadeIn 1s ease forwards;}
 
-    /* Stylish Heading */
-    .heading {
-      font-size: 32px;
-      font-weight: 800;
-      color: #ff6a00;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      margin: 20px 0;
-      background: linear-gradient(90deg, #ff6a00, #ffd36e);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: glowText 2s ease-in-out infinite alternate;
-    }
+/* Main Home Content */
+#mainContent {display:none; position:relative; z-index:2; text-align:center; padding-bottom:40px;}
+.heading {
+  font-size:36px;
+  font-weight:800;
+  color:#ff6a00;
+  text-transform:uppercase;
+  letter-spacing:2px;
+  margin:20px 0;
+  background:linear-gradient(90deg,#ff6a00,#ffd36e);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  animation:glowText 2s ease-in-out infinite alternate;
+}
+.title {display:flex;justify-content:space-between; padding:10px 14px; border-top:3px solid #ff6a00; border-bottom:3px solid #ff6a00; font-weight:bold; font-style:italic; font-size:22px; text-transform:uppercase; margin-bottom:10px;}
+.title span {text-decoration:underline;color:#ff6a00;}
+table {width:100%; border-collapse:collapse; margin-top:10px;}
+td.floor {font-weight:bold;font-size:20px;width:70px;color:#ff6a00;}
+td.company {display:flex;justify-content:center;gap:20px;flex-wrap:wrap; min-height:60px;align-items:center;}
+.company-item {display:flex;flex-direction:column;align-items:center;margin:6px 12px;opacity:0; transition:transform 0.3s ease; cursor:pointer;}
+.company-item img {max-height:60px;max-width:140px;margin-bottom:10px;border-radius:12px;background:white;padding:6px;transition:transform 0.3s ease, box-shadow 0.3s ease;}
+.company-item img:hover {transform:scale(1.1); box-shadow:0 6px 16px rgba(0,0,0,0.35);}
+.company-item span {font-size:16px;font-weight:600;color:#ff6a00;text-shadow:0 0 8px #ffd36e;letter-spacing:0.5px;}
 
-    @keyframes glowText {
-      0% { text-shadow: 0 0 8px #ff6a00, 0 0 16px #ffd36e; }
-      100% { text-shadow: 0 0 16px #ff6a00, 0 0 32px #ffd36e; }
-    }
-
-    .title {
-      display: flex;
-      justify-content: space-between;
-      padding: 10px 14px;
-      border-top: 3px solid #ff6a00;
-      border-bottom: 3px solid #ff6a00;
-      font-weight: bold;
-      font-style: italic;
-      font-size: 22px;
-      text-transform: uppercase;
-      animation: pixelate 1.5s steps(5, end) forwards;
-      margin-bottom: 10px;
-    }
-    .title span {
-      text-decoration: underline;
-      color: #ff6a00;
-    }
-
-    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-    tr { border-top: 1px solid rgba(0,0,0,0.1); }
-    td { padding: 14px; text-align: center; }
-
-    td.floor {
-      font-weight: bold;
-      font-size: 20px;
-      width: 70px;
-      color: #ff6a00;
-    }
-
-    td.company {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-      min-height: 60px;
-      align-items: center;
-    }
-
-    .company-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 6px 12px;
-      opacity: 0;
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-
-    .company-item img {
-      max-height: 60px;
-      max-width: 140px;
-      margin-bottom: 10px;
-      filter: drop-shadow(0 4px 12px rgba(0,0,0,0.25));
-      border-radius: 12px;
-      background: white;
-      padding: 6px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .company-item:hover img {
-      transform: scale(1.1);
-      box-shadow: 0 6px 16px rgba(0,0,0,0.35);
-    }
-
-    .company-item span {
-      font-size: 16px;
-      font-weight: 600;
-      color: #333;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.2);
-      letter-spacing: 0.5px;
-    }
-
-    @keyframes fadeInDown { 0% { opacity:0; transform: translateY(-50px);} 100% { opacity:1; transform: translateY(0);} }
-    @keyframes pixelate { 0% { filter: blur(8px); opacity:0;} 50% { filter: blur(4px); opacity:0.5;} 100% { filter: blur(0); opacity:1;} }
-    @keyframes fadeInUp { 0% { opacity:0; transform: translateY(40px);} 100% { opacity:1; transform: translateY(0);} }
-    @keyframes fadeInLeft { 0% { opacity:0; transform: translateX(-50px);} 100% { opacity:1; transform: translateX(0);} }
-    @keyframes zoomIn { 0% { opacity:0; transform: scale(0.7);} 100% { opacity:1; transform: scale(1);} }
-
-    #particles-js {
-      position: fixed;
-      top:0; left:0;
-      width: 100%; height: 100%;
-      z-index:0;
-      pointer-events:none;
-    }
-  </style>
+@keyframes fadeIn {0%{opacity:0;transform:translateY(20px);}100%{opacity:1;transform:translateY(0);}}
+@keyframes glowText {0%{text-shadow:0 0 8px #ff6a00,0 0 16px #ffd36e;}100%{text-shadow:0 0 16px #ff6a00,0 0 32px #ffd36e;}}
+</style>
 </head>
 <body>
-  <div id="particles-js"></div>
+<div id="particles-js"></div>
 
-  <div class="container">
-    <!-- Stylish Heading -->
-    <div class="heading">Tenant Directory</div>
+<!-- Full Page Intro Directory -->
+<div id="directoryIntro"></div>
 
-    <div class="title">
-      <span>FLOOR</span>
-      <span>BLOCK-A</span>
-    </div>
+<!-- Main Content -->
+<div id="mainContent" class="container">
+  <div class="heading">Tenant Directory</div>
+  <div class="title"><span>FLOOR</span><span>BLOCK-A</span></div>
+  <table id="directory"><tbody id="floors"></tbody></table>
+</div>
 
-    <table id="directory">
-      <tbody id="floors"></tbody>
-    </table>
-  </div>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+const firebaseConfig = {
+  apiKey: "AIzaSyCrGIB_YK33p_2EPTpU-klZ_3xQ5TOPm4c",
+  authDomain: "adora-ad.firebaseapp.com",
+  databaseURL: "https://adora-ad-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "adora-ad",
+  storageBucket: "adora-ad.firebasestorage.app",
+  messagingSenderId: "550034277527",
+  appId: "1:550034277527:web:966b16ce942a161e8955d2",
+  measurementId: "G-QW5Y41EKLR"
+};
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCrGIB_YK33p_2EPTpU-klZ_3xQ5TOPm4c",
-      authDomain: "adora-ad.firebaseapp.com",
-      databaseURL: "https://adora-ad-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "adora-ad",
-      storageBucket: "adora-ad.firebasestorage.app",
-      messagingSenderId: "550034277527",
-      appId: "1:550034277527:web:966b16ce942a161e8955d2",
-      measurementId: "G-QW5Y41EKLR"
-    };
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
+const floorsRef = ref(db,"blocks/A/floors");
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const floorsRef = ref(db, "blocks/A/floors");
-    const floorsContainer = document.getElementById("floors");
-    const animations = ["fadeInUp", "fadeInLeft", "zoomIn"];
+const directoryIntro = document.getElementById("directoryIntro");
+const floorsContainer = document.getElementById("floors");
 
-    onValue(floorsRef, (snapshot) => {
-      const data = snapshot.val();
-      floorsContainer.innerHTML = "";
+const animations = ["fadeIn","fadeIn","fadeIn"];
 
-      for (const floor in data) {
-        const tenantsObj = data[floor].tenants;
-        let row = `<tr>
-          <td class="floor">${floor}</td>
-          <td class="company">`;
+// Fetch floors and tenants
+onValue(floorsRef,(snapshot)=>{
+  const data = snapshot.val();
+  directoryIntro.innerHTML="";
 
-        if (tenantsObj && Object.keys(tenantsObj).length > 0) {
-          Object.keys(tenantsObj).forEach((key, idx) => {
-            const tenant = tenantsObj[key];
-            const anim = animations[Math.floor(Math.random() * animations.length)];
-            row += `
-              <div class="company-item" style="animation:${anim} 1s ease ${idx * 0.3}s forwards;">
-                <img src="${tenant.logo}" alt="${tenant.name}"/>
-                <span>${tenant.name}</span>
-              </div>
-            `;
-          });
-        } else {
-          row += `<span style="color:#ff6a00; font-weight:600;">No tenants</span>`;
-        }
+  // Show full page directory first
+  for(const floor in data){
+    const tenantsObj = data[floor].tenants;
+    const floorDiv = document.createElement("div");
+    floorDiv.className="intro-floor";
 
-        row += `</td></tr>`;
-        floorsContainer.innerHTML += row;
+    const floorTitle = document.createElement("h2");
+    floorTitle.textContent=`Floor ${floor}`;
+    floorDiv.appendChild(floorTitle);
+
+    const logosDiv = document.createElement("div");
+    logosDiv.className="intro-logos";
+
+    if(tenantsObj && Object.keys(tenantsObj).length>0){
+      Object.keys(tenantsObj).forEach((key,idx)=>{
+        const tenant = tenantsObj[key];
+        const container = document.createElement("div");
+        container.className="company-item";
+        container.style.animation=`fadeIn 1s ease ${idx*0.2}s forwards`;
+
+        const img = document.createElement("img");
+        img.src=tenant.logo;
+        container.appendChild(img);
+
+        const span = document.createElement("span");
+        span.textContent=tenant.name;
+        container.appendChild(span);
+
+        logosDiv.appendChild(container);
+      });
+    } else {
+      const span = document.createElement("span");
+      span.textContent="No tenants";
+      span.style.color="#ff6a00";
+      logosDiv.appendChild(span);
+    }
+
+    floorDiv.appendChild(logosDiv);
+    directoryIntro.appendChild(floorDiv);
+  }
+
+  // After 5 seconds, hide intro and show main content
+  setTimeout(()=>{
+    directoryIntro.style.display="none";
+    document.getElementById("mainContent").style.display="block";
+
+    // Populate main content table
+    floorsContainer.innerHTML="";
+    for(const floor in data){
+      const tenantsObj = data[floor].tenants;
+      let row = `<tr><td class="floor">${floor}</td><td class="company">`;
+      if(tenantsObj && Object.keys(tenantsObj).length>0){
+        Object.keys(tenantsObj).forEach((key,idx)=>{
+          const tenant=tenantsObj[key];
+          row+=`<div class="company-item" style="animation:fadeIn 1s ease ${idx*0.3}s forwards;"><img src="${tenant.logo}" alt="${tenant.name}"/><span>${tenant.name}</span></div>`;
+        });
+      } else {
+        row+=`<span style="color:#ff6a00; font-weight:600;">No tenants</span>`;
       }
-    });
-  </script>
+      row+=`</td></tr>`;
+      floorsContainer.innerHTML+=row;
+    }
+  },5000);
 
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS("particles-js", {
-      "particles": {
-        "number": { "value": 60 },
-        "size": { "value": 3 },
-        "move": { "speed": 2 },
-        "line_linked": { "enable": true, "color": "#ff6a00" },
-        "color": { "value": "#ff6a00" }
-      }
-    });
-  </script>
+});
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script>
+particlesJS("particles-js",{
+  "particles":{
+    "number":{"value":60},
+    "size":{"value":3},
+    "move":{"speed":2},
+    "line_linked":{"enable":true,"color":"#ff6a00"},
+    "color":{"value":"#ff6a00"}
+  }
+});
+</script>
 </body>
 </html>
